# world-address-yaml

./: .editorconfig  .eslintrc.json  .gitignore  AGENTS.md  AI_VISION_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT.md  IMPLEMENTATION_OVERVIEW.md  LICENSE  QUICK_START.md  README.md  README_IMPROVEMENTS.md  ROADMAP.md  SDK_IMPROVEMENTS_SUMMARY.md  UPDATE_SUMMARY.md  WAYBILL_IMPLEMENTATION_SUMMARY.md  WORLD_CLASS_QUALITY.md  package-lock.json  package.json
Vey/: IMPLEMENTATION_SUMMARY.md  README.md
africa/: README.md
americas/: README.md
antarctica/: README.md
asia/: README.md
cloud-address-book-app/: README.md
data/: README.md
docs/: CHANGELOG_SCREENSHOTS.md  README.md  SCREENSHOTS.md  cloud-address-book.md  design-system.md  digital-handshake-logistics.md  geocoding-guide.md  payment-integration.md  pid-algorithm.md  search-engine-algorithms.md  territorial-restrictions.md  vey-ecosystem-complete.md  vey-ecosystem.md  veyexpress-complete-specification.md  veyexpress-erd.md  veyexpress-sdk-examples.md  waybill-ai-capabilities.md  waybill-improvements.md  zkp-api.md  zkp-protocol.md
europe/: README.md
mini-programs/: ACCESSIBILITY.md  CONTRIBUTING.md  DESIGN-TOKENS.md  DEVELOPMENT-GUIDE.md  I18N.md  IMPLEMENTATION-GUIDE.md  QUALITY-COMPARISON.md  README.md  UI-UX-DESIGN.md
oceania/: README.md
scripts/: README.md  add-geo-coordinates.js  add-pos-data.js  classify_territories.js  data-stats.js  (+8 more)
sdk/python/: README.md  pyproject.toml
sdk/python/vey/: __init__.py  client.py  models.py
sdk/python/vey/integrations/: django.py  fastapi.py  flask.py
(+1400 files in other folders)
