[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vey-sdk"
version = "1.0.0"
description = "Python SDK for World Address YAML - Address validation and formatting"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["address", "validation", "world-address", "international"]
authors = [
  {name = "VEY Team"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "requests>=2.25.0",
]

[project.optional-dependencies]
django = ["django>=3.2"]
flask = ["flask>=2.0.0"]
fastapi = ["fastapi>=0.68.0", "pydantic>=1.8.0"]

[project.urls]
Homepage = "https://github.com/rei-k/world-address-yaml"
Documentation = "https://github.com/rei-k/world-address-yaml"
